Fixed contact button on mobile

--- a/style.css
+++ b/style.css
@@ -381,7 +381,6 @@ body.menu-expanded button path{
 
 #contact .button{
     margin-inline: 0;
-    margin-bottom: 0;
 }
 
 /* FOOTER */
